--- a/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
+++ b/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
@@ -15,6 +15,23 @@
   <div class="content-container">
     <div class="prose dark:prose-invert max-w-none" [innerHTML]="answer().body"></div>
     
+    @if (answer().attachments && answer().attachments.length > 0) {
+      <div class="attachments-section">
+        <div class="attachments-list">
+          @for (att of answer().attachments; track att.fileUrl) {
+            <a class="attachment-item" [href]="att.fileUrl" target="_blank" [title]="att.fileName">
+              @if (att.fileType.startsWith('image/')) {
+                <img [src]="att.fileUrl" alt="{{ att.fileName }}" class="img-preview" />
+              } @else {
+                <span nz-icon nzType="file-text" class="file-icon"></span>
+                <span class="file-name">{{ att.fileName }}</span>
+              }
+            </a>
+          }
+        </div>
+      </div>
+    }
+
     <div class="action-bar">
       <div class="actions">
         @if (isQuestionAuthor() && !answer().isSolution) {
@@ -23,10 +40,12 @@
             Mark as Solution
           </button>
         }
-        <button nz-button nzType="text" (click)="isCommentFormVisible.set(!isCommentFormVisible())" class="action-button">
-          <span nz-icon nzType="message"></span>
-          Add Comment
-        </button>
+        @if(authService.isUserLoggedIn()){
+          <button nz-button nzType="text" (click)="isCommentFormVisible.set(!isCommentFormVisible())" class="action-button">
+            <span nz-icon nzType="message"></span>
+            Add Comment
+          </button>
+        }
       </div>
       
       <div class="author-card">
@@ -41,25 +60,48 @@
     @if (isCommentFormVisible()) {
       <div class="comment-form-wrapper">
         <form [formGroup]="commentForm" (ngSubmit)="submitComment()">
-          <nz-form-item>
-            <nz-form-control>
-              <textarea nz-input formControlName="body" placeholder="Write a comment..." [nzAutosize]="{ minRows: 2, maxRows: 5 }"></textarea>
-            </nz-form-control>
-          </nz-form-item>
-          <div class="flex justify-end">
-            <button nz-button nzType="primary" [disabled]="commentForm.invalid">Submit</button>
+          <textarea nz-input formControlName="body" placeholder="Write a comment..." [nzAutosize]="{ minRows: 2, maxRows: 5 }"></textarea>
+          <div class="comment-form-actions">
+            <nz-upload
+              [nzFileList]="commentFileList()"
+              (nzChange)="handleCommentFileChange($event)"
+              [nzShowUploadList]="false"
+              [nzMultiple]="true"
+              [nzBeforeUpload]="preventAutoUpload">
+              <button nz-button nzType="text" nzShape="circle" type="button" nz-tooltip nzTooltipTitle="Attach files">
+                <span nz-icon nzType="paper-clip"></span>
+              </button>
+            </nz-upload>
+            <div class="submit-actions">
+              <button nz-button nzType="text" type="button" (click)="isCommentFormVisible.set(false)">Cancel</button>
+              <button nz-button nzType="primary" [disabled]="commentForm.invalid">Submit</button>
+            </div>
           </div>
         </form>
+        @if (commentFileList().length > 0) {
+          <div class="file-list-preview">
+            @for (file of commentFileList(); track file.uid) {
+              <div class="file-item">
+                <span nz-icon nzType="file-text"></span>
+                <span>{{ file.name }}</span>
+                <button nz-button nzType="text" nzShape="circle" type="button" (click)="removeCommentFile(file)">
+                  <span nz-icon nzType="close"></span>
+                </button>
+              </div>
+            }
+          </div>
+        }
       </div>
     }
     
     <div class="comments-section">
       @for (comment of answer().comments; track comment.commentId) {
-        <app-comment-item 
-          [comment]="comment"
-          [answerId]="answer().answerId"
-          (updateRequired)="updateRequired.emit()"
-        ></app-comment-item>
+        <app-comment-item
+  [comment]="comment"
+  [answerId]="answer().answerId"
+
+  (updateRequired)="updateRequired.emit()"
+></app-comment-item>
       }
     </div>
   </div>
