--- a/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
+++ b/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
@@ -57,51 +57,50 @@
       </div>
     </div>
     
-    @if (isCommentFormVisible()) {
-      <div class="comment-form-wrapper">
-        <form [formGroup]="commentForm" (ngSubmit)="submitComment()">
-          <textarea nz-input formControlName="body" placeholder="Write a comment..." [nzAutosize]="{ minRows: 2, maxRows: 5 }"></textarea>
-          <div class="comment-form-actions">
-            <nz-upload
-              [nzFileList]="commentFileList()"
-              (nzChange)="handleCommentFileChange($event)"
-              [nzShowUploadList]="false"
-              [nzMultiple]="true"
-              [nzBeforeUpload]="preventAutoUpload">
-              <button nz-button nzType="text" nzShape="circle" type="button" nz-tooltip nzTooltipTitle="Attach files">
-                <span nz-icon nzType="paper-clip"></span>
+    <div class="comment-form-wrapper" [hidden]="!isCommentFormVisible()">
+      <form [formGroup]="commentForm" (ngSubmit)="submitComment()">
+        <textarea nz-input formControlName="body" placeholder="Write a comment..." [nzAutosize]="{ minRows: 2, maxRows: 5 }"></textarea>
+        <div class="comment-form-actions">
+          
+          <nz-upload
+            [nzFileList]="commentFileList()"
+            (nzChange)="handleCommentFileChange($event)"
+            [nzShowUploadList]="false"
+            [nzMultiple]="true"
+            [nzBeforeUpload]="beforeUpload" >
+            <button nz-button nzType="text" nzShape="circle" type="button" nz-tooltip nzTooltipTitle="Attach files">
+              <span nz-icon nzType="paper-clip"></span>
+            </button>
+          </nz-upload>
+
+          <div class="submit-actions">
+            <button nz-button nzType="text" type="button" (click)="isCommentFormVisible.set(false)">Cancel</button>
+            <button nz-button nzType="primary" [disabled]="commentForm.invalid">Submit</button>
+          </div>
+        </div>
+      </form>
+      @if (commentFileList().length > 0) {
+        <div class="file-list-preview">
+          @for (file of commentFileList(); track file.uid) {
+            <div class="file-item">
+              <span nz-icon nzType="file-text"></span>
+              <span>{{ file.name }}</span>
+              <button nz-button nzType="text" nzShape="circle" type="button" (click)="removeCommentFile(file)">
+                <span nz-icon nzType="close"></span>
               </button>
-            </nz-upload>
-            <div class="submit-actions">
-              <button nz-button nzType="text" type="button" (click)="isCommentFormVisible.set(false)">Cancel</button>
-              <button nz-button nzType="primary" [disabled]="commentForm.invalid">Submit</button>
             </div>
-          </div>
-        </form>
-        @if (commentFileList().length > 0) {
-          <div class="file-list-preview">
-            @for (file of commentFileList(); track file.uid) {
-              <div class="file-item">
-                <span nz-icon nzType="file-text"></span>
-                <span>{{ file.name }}</span>
-                <button nz-button nzType="text" nzShape="circle" type="button" (click)="removeCommentFile(file)">
-                  <span nz-icon nzType="close"></span>
-                </button>
-              </div>
-            }
-          </div>
-        }
-      </div>
-    }
+          }
+        </div>
+      }
+    </div>
     
     <div class="comments-section">
       @for (comment of answer().comments; track comment.commentId) {
         <app-comment-item
-  [comment]="comment"
-  [answerId]="answer().answerId"
-
-  (updateRequired)="updateRequired.emit()"
-></app-comment-item>
+          [comment]="comment"
+          [answerId]="answer().answerId"
+          (updateRequired)="updateRequired.emit()"
+        ></app-comment-item>
       }
     </div>
   </div>
